syntax = "proto3";
option go_package = "GitHub.com/vifattahi/microservices/proto/order/";

message CreateOrderRequest {
    int64 userId = 1;
    repeated Item items = 2;
    float totalPrice = 3;
}

message Item {
    string name = 1;
}

message CreateOrderResponse {
    int64 orderId = 1;
}

service Order {
    rpc Create (CreateOrderRequest) returns (CreateOrderResponse){};
}